<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_detail_story"
        android:layout_width="409dp"
        android:layout_height="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/detail_story" />

    <TextView
        android:id="@+id/tv_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/story_list_created_at"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_story" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_date_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_detail" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/message_welcome_page"
        app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />
</androidx.constraintlayout.widget.ConstraintLayout>